--- a/papers/gpce2013/biblio.bib
+++ b/papers/gpce2013/biblio.bib
@@ -1,3 +1,13 @@
+@article{Van00_DSL,
+  title={Domain-specific languages: an annotated bibliography},
+  author={Van Deursen, Arie and Klint, Paul and Visser, Joost},
+  journal={ACM Sigplan Notices},
+  volume={35},
+  number={6},
+  pages={26--36},
+  year={2000}
+}
+
 @inproceedings{Jorring1986_Staging,
   title={Compilers and staging transformations},
   author={J{\o}rring, Ulrik and Scherlis, William L},
